Update logic and separated CSS files

--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <style>
+    <link rel="stylesheet" href="styles.css" />
+    <!-- <style>
       @import url("https://fonts.googleapis.com/css?family=Press+Start+2P&display=swap");
       * {
         margin: 0%;
@@ -131,7 +132,7 @@
         cursor: pointer;
         font-family: "Press Start 2P";
       }
-    </style>
+    </style> -->
   </head>
 
   <body>
